# Calculator

./: CMakeLists.txt  README.md
GUI/: gui.cpp
GUI/include/: window.h
GUI/src/: window.cpp
